feat(config): 重构BV号文件配置并添加多来源支持
重构配置文件结构，将单一BV文件路径改为支持多来源的配置：
1. 创建BV_SOURCES_DIR目录存放不同来源的BV号文件
2. 添加DEFAULT_BV_FILES配置支持驴酱和甜筒的BV列表
3. 更新main.py以支持新的配置结构和显示可用选项
4. 添加lvjiang-bv.txt和tiantong-bv.txt示例文件
5. 更新文档说明新的数据目录结构和使用方法

--- a/docs/后端编码规范.md
+++ b/docs/后端编码规范.md
@@ -264,16 +264,39 @@ MAX_PAGES=5
 
 ```
 backend/
-├── data/            # 数据文件目录
-├── templates/       # 模板文件目录
-├── auto_crawler.py  # 自动爬取脚本
-├── crawl_metadata.py # 元数据爬取脚本
-├── download_thumbs.py # 缩略图下载脚本
-├── requirements.txt # 依赖文件
-└── README.md        # 说明文档
+├── src/                 # 主源码目录
+│   ├── crawler/         # 爬虫核心模块
+│   │   ├── __init__.py
+│   │   └── auto_crawler.py       # 自动化爬虫实现
+│   ├── downloader/      # 下载模块
+│   │   ├── __init__.py
+│   │   └── download_thumbs.py    # 缩略图下载功能
+│   ├── commands/        # 命令行工具
+│   │   ├── __init__.py
+│   │   └── approve_videos.py     # 视频审核工具
+│   └── utils/           # 工具函数
+│       ├── __init__.py
+│       └── config.py    # 配置文件
+├── data/                # 数据存储目录
+│   ├── raw/             # 原始爬取数据
+│   │   ├── pending.json     # 待审核视频列表
+│   │   ├── approved.json    # 已通过审核视频列表
+│   │   └── rejected.json    # 已拒绝视频列表
+│   ├── processed/       # 处理后的数据
+│   │   └── videos.json      # 前端时间线数据
+│   ├── sources/         # BV号来源文件
+│   │   ├── lvjiang-bv.txt   # 驴酱UP主的BV号列表
+│   │   └── tiantong-bv.txt  # 甜筒UP主的BV号列表
+│   └── README.md        # 数据目录说明
+├── tests/               # 测试目录
+│   ├── __init__.py
+│   └── test_*.py        # 单元测试文件
+├── main.py              # 主入口脚本
+├── requirements.txt     # 依赖文件
+└── README.md            # 项目说明文档
 ```
 
-每个功能模块的代码组织在独立的文件中，如视频爬取功能在 auto_crawler.py 文件中，元数据处理功能在 crawl_metadata.py 文件中。数据文件放在 data 目录下，模板文件放在 templates 目录下。这种结构使得代码易于定位和维护。
+每个功能模块的代码组织在独立的文件中，使用 `src/` 目录作为源代码根目录，按功能模块（crawler、downloader、commands、utils）进行划分。数据文件放在 `data/` 目录下，按照数据类型（raw、processed、sources）组织。这种结构使得代码易于定位和维护。
 
 ### 6.2 类与函数设计原则
 
